tests/lit/tcheck/runtime_03.isa
// RUN: not %iii --batchmode --runtime-checks %s | filecheck %s
// Copyright (C) 2026-2026 Intel Corporation

function Test()
begin
    let t := (-3) / 1;
// CHECK: Type error: Runtime check for non-negative dividend will always fail
end
